scripts/deploy-environment/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: enterprise-%SERVICE_NAME%-deployment
  labels:
    app: enterprise-%SERVICE_NAME%
spec:
  selector:
    matchLabels:
      app: enterprise-%SERVICE_NAME%
  template:
    metadata:
      labels:
        app: enterprise-%SERVICE_NAME%
    spec:
      containers:
        - name: enterprise-demo
          image: hookandloop/enterprise:%IMAGE_VERSION%
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 128Mi
