scripts/deploy-environment/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: enterprise-%SERVICE_NAME%-service
spec:
  selector:
    app: enterprise-%SERVICE_NAME%
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
  type: ClusterIP
