scripts/deploy-environment/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: enterprise-%SERVICE_NAME%-ingress
spec:
  tls:
    - secretName: demo-design-infor
      hosts:
        - demo.design.infor.com
  rules:
    - host: %SERVICE_NAME%-enterprise.demo.design.infor.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: enterprise-%SERVICE_NAME%-service
              port:
                number: 80
  ingressClassName: nginx
